--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     var sheetsApiLoaded = false;
 
     // var pageSplash;
+    // var pageSplash;
 
 
     // Load the Visualization API and the corechart package.
@@ -281,10 +282,7 @@
 
                 </div>
             </div>
-        </div>
-    </main>
-</div>
-
-
+        </main>
+    </div>
 </body>
 </html>
