--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
     <script type="text/javascript">
 
+        //TODO: js-file
+        //TODO: add to git(hub)
+        //TODO: include at bottom
+        //TODO: init global variables
+
     var minmax_config_form;
     var min_temp;
     var max_temp;
