first prod version, showing battery diagram.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <header class="mdl-layout__header">
                 <div class="mdl-layout__header-row">
                     <!-- Title -->
-                    <span class="mdl-layout-title">We are Jim's monitors</span>
+                    <span class="mdl-layout-title">We are Jim's gauges</span>
                 </div>
             </header>
 
