--- a/index.html
+++ b/index.html
@@ -1,99 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta charset="UTF-8"/>
-        <title>Jimonitor</title>
+<html>
+<head>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+  
+</head>
 
-        <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.4/material.indigo-pink.min.css"/>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+  <body>
+    <div id="app">
+      <v-app>
 
-        <script type="text/javascript" src="https://storage.googleapis.com/code.getmdl.io/1.0.4/material.min.js"></script>
-        <script type="text/javascript" src="https://apis.google.com/js/api.js"></script>
-        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <v-toolbar dark color="primary">
+          <v-toolbar-title class="white--text">Tidla temperature</v-toolbar-title>
 
-    </head>
+          <v-spacer></v-spacer>
+          <!-- <v-img src="baseline-battery_30-24px.svg" class="grey lighten-2" max-height="24px" height="24px"></v-img> -->
+          <img id="battery" class="grey lighten-5" src="svg/baseline-battery_full-24px.svg"/>
+        </v-toolbar>
 
-    <body>
-        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header
-                     mdl-layout--no-drawer-button">
+        <v-content>
+          <div id="temperature_chart_div" >Temp chart</div>
+        </v-content>
 
-            <!-- Header section containing logo and menu -->
+      </v-app>
+    </div>
+  </body> 
 
-            <header class="mdl-layout__header">
-                <div class="mdl-layout__header-row">
-                    <!-- Title -->
-                    <span class="mdl-layout-title">We are Jim's gauges</span>
-                </div>
-            </header>
+  <script src="https://www.gstatic.com/charts/loader.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
+  <script src="main.js"></script>
+  
 
-            <main class="mdl-layout__content">
-                <div class="page-content">
-                    <!-- Your content goes here -->
-
-                    <div class="mdl-grid">
-                        <div class="mdl-card mdl-cell mdl-cell--6-col mdl-cell--6-col-tablet mdl-cell--4-col-phone mdl-shadow--2dp">
-                            <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
-                                <h2 class="mdl-card__title-text">Gauges</h2>
-                            </div>
-                            <div class="mdl-card__supporting-text mdl-card--expand">
-                                <div class="mdl-grid ">
-                                    <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--2-col-phone"
-                                         id="temp_div">Temp gauge
-                                    </div>
-                                    <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--2-col-phone"
-                                         id="bat_div">Bat gauge
-                                    </div>
-                                    <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--2-col-phone"
-                                         id="db_div">db gauge
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="mdl-card mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-shadow--2dp">
-                            <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
-                                <h4 class="mdl-card__title-text">Update Min/Max Limits</h4>
-                            </div>
-
-                            <div class="mdl-card__supporting-text">
-
-                                <form id="minmax_config_form">
-                                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                        <input class="mdl-textfield__input" type="text" pattern="[0-9.]*" id="mintemp"
-                                               value="1"/>
-                                        <label class="mdl-textfield__label" for="mintemp">Minimum temperature...</label>
-                                        <span class="mdl-textfield__error">Numeric input only</span>
-                                    </div>
-                                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                        <input class="mdl-textfield__input" type="text" pattern="[0-9.]*" id="maxtemp"
-                                               value="2">
-                                        <label class="mdl-textfield__label" for="maxtemp">Maximum temperature...</label>
-                                        <span class="mdl-textfield__error">Numeric input only</span>
-                                    </div>
-                                    <br/>
-                                    <button type="submit"
-                                            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
-                                            id="save_button" disabled>Save
-                                    </button>
-                                </form>
-                            </div>
-                        </div>
-
-                        <div class="mdl-card mdl-cell mdl-cell--10-col mdl-cell--8-col-tablet mdl-cell--4-col-phone mdl-shadow--2dp ">
-                            <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
-                                <h4 class="mdl-card__title-text">Time series</h4>
-                            </div>
-                            <div class="mdl-card__supporting-text ">
-                                <div id="annotation_div" style="height: 220px; ">Temp chart</div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </main>
-        </div>
-    </body>
-
-    <script type="text/javascript" src="main.js"></script>
 </html>
