--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <v-app>
 
         <v-toolbar dark color="primary">
-          <v-toolbar-title class="white--text">Tidla temperature</v-toolbar-title>
+          <v-toolbar-title class="white--text">Tidla temperatures</v-toolbar-title>
 
           <v-spacer></v-spacer>
           <!-- <v-img src="baseline-battery_30-24px.svg" class="grey lighten-2" max-height="24px" height="24px"></v-img> -->
